--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ kde4_add_library(okularplugin SHARED ${okularplugin_SRCS})
 target_link_libraries(okularplugin ${KDE4_KDEUI_LIBS} ${KDE4_KPARTS_LIBS})
 
 ########### install files ###############
-install(TARGETS okularplugin DESTINATION ${BIN_INSTALL_DIR} )
+install(TARGETS okularplugin DESTINATION ${KDE4_LIB_DIR} )
 install( FILES okularpluginui.rc
     DESTINATION  ${DATA_INSTALL_DIR}/okularplugin )
