--- a/okularpluginui.rc
+++ b/okularpluginui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="kparttut1" version="1">
+<kpartgui name="okularplugin" version="1">
 
  <MenuBar>
   <Menu name="file" >
