CMakeLists.txt:   - install .rc files into right directory ($KDE4_DATA_DIR)
README:
  - Build instructions updated: Seperate build from source

partwin.ccp, partin.h:
  - fixed focus problem
  - disable menubar (we don't want this in a browser plugin...)
  - use own toolbar settings for okularplugin. Changing the toolbar at
    the plugin does no longer change settings for the okular executable!

okularpluginui.rc
  - GUI settings for the okular part
  - predefined toolbar settings suitable for browser plugin

okularplugin_okularui.rc
  - GUI settings for the plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,6 @@ target_link_libraries(okularplugin ${KDE4_KDEUI_LIBS} ${KDE4_KPARTS_LIBS})
 ########### install files ###############
 install(TARGETS okularplugin DESTINATION ${KDE4_LIB_DIR} )
 install( FILES okularpluginui.rc
-    DESTINATION  ${DATA_INSTALL_DIR}/okularplugin )
+	DESTINATION  ${KDE4_DATA_DIR}/okularplugin )
+install( FILES okularplugin_okularui.rc
+	DESTINATION  ${KDE4_DATA_DIR}/okularplugin )
