--- a/okularplugin_okularui.rc
+++ b/okularplugin_okularui.rc
@@ -8,6 +8,8 @@
   <!-- we don't want a menubar -->
  </MenuBar>
  <ToolBar noMerge="1" name="mainToolBar">
+ </ToolBar>
+ <ToolBar noMerge="1" name="okularToolBar">
   <text>Main Toolbar</text>
   <Action name="file_save_as"/>
   <Separator name="separator_0"/>
