Save button saves now copy of the document.
Some file types like .xps can't be saved by ocular with the "save_as"
dialog. Saving a copy of the opened document with "save_copy" should work
in all cases.

--- a/okularplugin_okularui.rc
+++ b/okularplugin_okularui.rc
@@ -9,7 +9,7 @@
  </MenuBar>
  <ToolBar noMerge="1" name="okularToolBar">
   <text>Main Toolbar</text>
-  <Action name="file_save_as"/>
+  <Action name="file_save_copy"/>
   <Separator name="separator_0"/>
   <Action name="go_previous"/>
   <Action name="go_next"/>
